feat: Добавлена Тёмная\Светлая тема + вёрстка\Исправлено окно Регистрации\Авторизации